[package]
name = "reap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reap"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
colored = "2"
crossterm = "0.29"
atty = "0.2"
nix = { version = "0.27", features = ["signal", "process"] }
procfs = "0.16"
uzers = "0.12"
