[package]
name = "reap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reap"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
colored = "2"
crossterm = "0.29"
atty = "0.2"
nix = { version = "0.28", features = ["signal", "process"] }
procfs = "0.16"
rustc-hash = "2"
uzers = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
